--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,8 +9,8 @@ header {
     width: 100%;
     height: 70px;
     background-color: #5956ff;
-    border-bottom: 5px solid orange;
-    position: fixed;
+
+
 }
 .logo {
     display: block;
@@ -22,7 +22,6 @@ header {
 .logo img {
     width: 100%;
     height: 100%;
-
     object-fit: contain;
 }
 .header_list {
@@ -64,12 +63,120 @@ header {
 .header_list ul a:hover {
     color: rgb(246, 250, 4);
     transform: translateY(-3px);
-    
     transition: all .2s ease;
 }
+.container_list {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    min-height: 750px;
+    justify-content: center;
 
+    flex-wrap: wrap;
+}
 
+.container_tovara {
+    width: 200px;
+    height: 300px;
+    margin: 15px;
+    position: relative;
+    border-radius: 8px;
+}
 
+.product_foto_container {
+
+    width: 100%;
+    height: 70%;
+}
+
+.product_foto {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    opacity: 1;
+}
+
+.product_foto:hover {
+    cursor: pointer;
+    opacity: 0.7;
+    transition: all 0.3s ease;
+}
+
+.product_foto img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.container_tovara:hover {
+    border: 1px solid rgb(53, 53, 243);
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 6px 1px rgb(53, 53, 243);
+}
+
+.main_container {
+    width: 100%;
+    height: 30%;
+
+}
+
+.nazva {
+    width: 100%;
+    height: 60%;
+
+}
+
+.nazva a {
+    text-decoration: none;
+    color: black;
+}
+
+.cina_vkorzinu {
+    display: flex;
+    justify-content: space-between;
+
+    width: 100%;
+    height: 40%;
+}
+
+.cina {
+    width: 40%;
+
+}
+
+.cinatext {
+    font-family: 'Lora', serif;
+    text-align: center;
+    font-size: 20px;
+    color: rgb(199, 13, 13);
+}
+
+.nazva_tovaru {
+    text-align: center;
+    font-family: 'Exo 2', sans-serif;
+    font-size: 15px;
+}
+
+.vkorzinu {}
+
+.btn {
+    color: rgb(15, 19, 241);
+    font-size: 25px;
+    cursor: pointer;
+    width: 35px;
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+    border: none;
+}
+
+.btn:hover {
+
+    border-radius: 5px;
+    color: rgb(226, 240, 99);
+    background-color: rgb(8, 114, 184);
+    border-color: blue;
+}
 
 
 
