--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,21 +8,24 @@ header {
     justify-content: space-between;
     width: 100%;
     height: 70px;
-    background-color: #5956ff;
+
 
 
 }
 .logo {
-    display: block;
+    display: flex;
     margin-left: 15px;
     width: 250px;
     height: 100%;
 
+
 }
 .logo img {
+    padding: 5px;
     width: 100%;
-    height: 100%;
+    height:100%;
     object-fit: contain;
+
 }
 .header_list {
 
@@ -52,7 +55,7 @@ header {
 }
 .header_list ul a {
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     color: white;
     font-family: "Raleway", sans-serif;
@@ -65,14 +68,275 @@ header {
     transform: translateY(-3px);
     transition: all .2s ease;
 }
+body {
+    width: 100%;
+    height: 100vh;
+    background: 
+    url("../IMG/pray-for-ukraine.webp") center 
+    no-repeat;
+    background-size:cover;
+
+
+}
+.sub-menu {
+    display: flex;
+    align-items:center;
+
+
+}
+/*випадаюче меню*/
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+
+    margin-left: 50px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    width: 175px;
+    height: 100%;
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    height: 42px;
+  }
+  
+  .dropdown-content {
+
+    margin-left: 50px;
+    display: none;
+    position: absolute;
+
+    background-color: #f9f9f9;
+    min-width: 175px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    color: black;
+    padding: 5px 5px;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    border-bottom: 1px solid gray;
+  }
+  
+  .dropdown-content a:hover {background-color: #537cee;
+
+}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+    
+  }
+  /*кінець випадаючого меню*/
+
+/*пошук тексту*/
+.search-form {
+
+    position: relative;
+    left: 0;
+    width: 500px;
+    margin-left: 25px;
+  }
+.search-str {
+    width: 100%;
+    height: 42px;
+    padding-left: 10px;
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 5px;
+    outline: none;
+    background: #F9F0DA;
+    color: #9E9C9C;
+  }
+.search-btn {
+    position: absolute; 
+    top: 0;
+    right: 0px;
+    width: 42px;
+    height: 42px;
+    border: none;
+    background: rgb(53, 53, 243);
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+  }
+.search-btn:before {
+    content: "\f002";
+    font-family: FontAwesome;
+    font-size: 16px;
+    color: #F9F0DA;
+  }
+/*кінець пошук тексту*/
+
+/*список побажань*/
+.like-cont button a{
+    width: 130px;
+    height: 42px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    text-decoration: none;
+    font-family: "Raleway", sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+}
+.like-cont button {
+    margin-left: 35px;
+    background: none;
+    border: none;
+
+
+}
+
+.like-cont button a span {
+    font-size: 40px;
+}
+/*кінець список побажань*/
 .container_list {
     width: 100%;
     height: 100%;
     display: flex;
-    min-height: 750px;
     justify-content: center;
-
     flex-wrap: wrap;
+    
+}
+
+.container_tovara {
+    width: 200px;
+    height: 300px;
+    margin: 15px;
+    position: relative;
+    border-radius: 8px;
+    background-color: white;
+}
+
+.product_foto_container {
+
+    width: 100%;
+    height: 70%;
+}
+
+.product_foto {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    opacity: 1;
+}
+
+.product_foto:hover {
+    cursor: pointer;
+    opacity: 0.7;
+    transition: all 0.3s ease;
+}
+
+.product_foto img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.container_tovara:hover {
+    border: 1px solid rgb(53, 53, 243);
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 6px 1px rgb(53, 53, 243);
+}
+
+.main_container {
+    width: 100%;
+    height: 30%;
+background-color: rgb(231, 223, 223);
+border-bottom-left-radius: 8px;
+border-bottom-right-radius: 8px;
+}
+
+.nazva {
+    width: 100%;
+    height: 60%;
+
+}
+
+.nazva a {
+    text-decoration: none;
+    color: black;
+}
+
+.cina_vkorzinu {
+    display: flex;
+    justify-content: space-between;
+
+    width: 100%;
+    height: 40%;
+}
+
+.cina {
+    width: 40%;
+
+}
+
+.cinatext {
+    font-family: 'Lora', serif;
+    text-align: center;
+    font-size: 20px;
+    color: rgb(199, 13, 13);
+}
+
+.nazva_tovaru {
+    text-align: center;
+    font-family: 'Exo 2', sans-serif;
+    font-size: 15px;
+}
+
+.vkorzinu {}
+
+.btn {
+    color: rgb(15, 19, 241);
+    font-size: 25px;
+    cursor: pointer;
+    width: 35px;
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+    border: none;
+}
+
+.btn:hover {
+
+    border-radius: 5px;
+    color: rgb(226, 240, 99);
+    background-color: rgb(8, 114, 184);
+    border-color: blue;
+}
+
+
+
+
+
+
+}
+
+.container_list {
+    width: 100%;
+    height: 100%;
+    display: flex;
+
+    justify-content: center;
+    flex-wrap: wrap;
+    
 }
 
 .container_tovara {
@@ -177,7 +441,6 @@ header {
     background-color: rgb(8, 114, 184);
     border-color: blue;
 }
-
 
 
 
