--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -70,11 +70,16 @@ header {
 }
 body {
     width: 100%;
-    height: 100vh;
+    height: 150vh;
+    margin-bottom: 0;
+    padding-bottom: 0;
     background: 
     url("../IMG/pray-for-ukraine.webp") center 
     no-repeat;
     background-size:cover;
+    position: relative;
+
+
 
 
 }
@@ -209,7 +214,7 @@ body {
 /*кінець список побажань*/
 .container_list {
     width: 100%;
-    height: 100%;
+    height: 70%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -321,127 +326,99 @@ border-bottom-right-radius: 8px;
     background-color: rgb(8, 114, 184);
     border-color: blue;
 }
-
-
-
-
-
-
-}
-
-.container_list {
+/*footer*/
+footer {
     width: 100%;
-    height: 100%;
-    display: flex;
-
-    justify-content: center;
-    flex-wrap: wrap;
+    height: 100px;
+    position: absolute;
+    bottom: 0px;
+    padding: 0;
+    background:none;
+    opacity: 1.1;
+    border-top: 4px solid #3e1dfc;
     
-}
+    }
 
-.container_tovara {
-    width: 200px;
-    height: 300px;
-    margin: 15px;
-    position: relative;
-    border-radius: 8px;
-}
-
-.product_foto_container {
-
-    width: 100%;
-    height: 70%;
-}
-
-.product_foto {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    opacity: 1;
-}
-
-.product_foto:hover {
-    cursor: pointer;
-    opacity: 0.7;
-    transition: all 0.3s ease;
-}
-
-.product_foto img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-.container_tovara:hover {
-    border: 1px solid rgb(53, 53, 243);
-    transition: all 0.3s ease;
-    box-shadow: 3px 3px 6px 1px rgb(53, 53, 243);
-}
-
-.main_container {
-    width: 100%;
-    height: 30%;
-
-}
-
-.nazva {
-    width: 100%;
-    height: 60%;
-
-}
-
-.nazva a {
-    text-decoration: none;
-    color: black;
-}
-
-.cina_vkorzinu {
+    .footer_container {
+background-color: #537cee ;
     display: flex;
     justify-content: space-between;
-
     width: 100%;
-    height: 40%;
-}
-
-.cina {
-    width: 40%;
-
-}
-
-.cinatext {
-    font-family: 'Lora', serif;
-    text-align: center;
-    font-size: 20px;
-    color: rgb(199, 13, 13);
-}
-
-.nazva_tovaru {
-    text-align: center;
-    font-family: 'Exo 2', sans-serif;
-    font-size: 15px;
-}
-
-.vkorzinu {}
-
-.btn {
-    color: rgb(15, 19, 241);
-    font-size: 25px;
-    cursor: pointer;
-    width: 35px;
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
-    border: none;
-}
-
-.btn:hover {
-
-    border-radius: 5px;
-    color: rgb(226, 240, 99);
-    background-color: rgb(8, 114, 184);
-    border-color: blue;
-}
-
+    height: 100%;
+    padding-top: 10px;
+    }
+    .grafik {
+            width: 12%;
+        height: 100%;
+        margin-left: 40px;
+        color: rgb(0, 0, 0);
+        
+    }
+    .grf {
+        display: flex;
+        justify-content: space-between;
+    }
+    .social {
+            width: 30%;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        margin-right: 10px;
+    }
+    .social img {
+        width: 2.5vw;
+        height: 2.5vw;
+        object-fit: contain;
+    }
+    .bold_text {
+        font-size: 1vw;
+        font-weight: 700;
+    
+    }
+    .grf p {
+        font-size: 1vw;
+    }
+    .grafik_title {
+        text-align: center;
+        font-size: 1.5vw;
+        font-weight: 700;
+    }
+    .contacts {
+    
+        width: 35%;
+        height: 100%;
+        color: rgb(0, 0, 0);
+        position: relative;
+        
+    }
+    .icon_ctnt {
+        
+    }
+    .contn {
+    display: flex;
+    justify-content: space-between;
+    }
+    .cont-title {
+        text-align: center;
+        color: rgb(4, 4, 4);
+        font-size: 1.5vw;
+        font-weight: 700;
+    }
+    .icon_ctnt  img, .txt_ctnt img {
+        width: 1.5vw;
+        height: 1.5vw;
+        object-fit: contain;
+        margin-right: 10px;
+        margin-top: 5px;
+    }
+    .tak {
+        font-size: 1.5vw;
+        padding-bottom: 15px;
+    
+    }
+/*кінець футера*/
 
 
 
