--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,22 +3,29 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    width: 100%;
+    height: 100%;
+    min-height: 2400px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    background: 
+    url("../IMG/pray-for-ukraine.webp") center 
+    no-repeat;
+    background-size:cover;
+    position: relative;
+}
 header {
     display: flex;
     justify-content: space-between;
     width: 100%;
     height: 70px;
-
-
-
 }
 .logo {
     display: flex;
     margin-left: 15px;
     width: 250px;
     height: 100%;
-
-
 }
 .logo img {
     padding: 5px;
@@ -68,21 +75,7 @@ header {
     transform: translateY(-3px);
     transition: all .2s ease;
 }
-body {
-    width: 100%;
-    height: 150vh;
-    margin-bottom: 0;
-    padding-bottom: 0;
-    background: 
-    url("../IMG/pray-for-ukraine.webp") center 
-    no-repeat;
-    background-size:cover;
-    position: relative;
 
-
-
-
-}
 .sub-menu {
     display: flex;
     align-items:center;
@@ -212,6 +205,39 @@ body {
     font-size: 40px;
 }
 /*кінець список побажань*/
+/*cлайдер з фото*/
+.slider {
+    display: block;
+     left: 50px;
+
+}
+.container_slider_css{
+    margin:50px auto;
+    width:60%;
+    height:400px;
+    overflow:hidden;
+    position:relative;
+    border-radius: 10px;
+    box-shadow: 3px 3px 6px 2px rgb(4, 4, 165);
+}
+.photo_slider_css{position:absolute;animation:round 16s infinite;opacity:0;width:100%}
+@keyframes round {
+25%{opacity:1}
+40%{opacity:0}
+}
+img:nth-child(1){animation-delay:12s}
+img:nth-child(2){animation-delay:8s}
+img:nth-child(3){animation-delay:4s}
+img:nth-child(4){animation-delay:0}
+@media(min-width:0px) and (max-width:320px) {
+.container_slider_css{width:80%;height:190px}
+}
+@media(min-width:321px) and (max-width:480px) {
+.container_slider_css{width:80%;height:190px}
+}
+/*кінець cлайдер з фото*/
+
+
 .container_list {
     width: 100%;
     height: 70%;
@@ -259,6 +285,7 @@ body {
     border: 1px solid rgb(53, 53, 243);
     transition: all 0.3s ease;
     box-shadow: 3px 3px 6px 1px rgb(53, 53, 243);
+
 }
 
 .main_container {
