--- a/CSS/yryt.css
+++ b/CSS/yryt.css
@@ -206,20 +206,29 @@ header {
 }
 /*кінець список побажань*/
 /*cлайдер з фото*/
-.slider {
 
-
+.main-info-container {
+   display: flex;
 }
+.slider {
+    position: absolute;
+    width:100%;
+    display: flex;
+ }
+
 .container_slider_css{
-    margin:50px auto;
-    width:60%;
+
+    margin-left: 100px;
+    width:350px;
     height:400px;
     overflow:hidden;
     position:relative;
     border-radius: 10px;
+    
     box-shadow: 3px 3px 6px 2px rgb(4, 4, 165);
 }
-.photo_slider_css{position:absolute;animation:round 16s infinite;opacity:0;width:100%}
+.photo_slider_css{position:absolute;
+    animation:round 16s infinite;opacity:0;width:100%}
 @keyframes round {
 25%{opacity:1}
 40%{opacity:0}
@@ -236,122 +245,47 @@ img:nth-child(4){animation-delay:0}
 }
 /*кінець cлайдер з фото*/
 
-
-.container_list {
-    width: 100%;
-    height: 70%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    
+/*основні характеристики*/
+h2 {
+    font-family: "Raleway", sans-serif;
+    font-size: 40px;
+    text-align: center;
+    margin: 50px;
+    color: white;
+  font-family: "Arimo", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
 }
 
-.container_tovara {
-    width: 200px;
-    height: 300px;
-    margin: 15px;
-    position: relative;
-    border-radius: 8px;
-    background-color: white;
+.main-info {
+    width: 60%;
 }
-
-.product_foto_container {
-
-    width: 100%;
-    height: 70%;
-}
-
-.product_foto {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    opacity: 1;
-}
-
-.product_foto:hover {
-    cursor: pointer;
-    opacity: 0.7;
-    transition: all 0.3s ease;
-}
-
-.product_foto img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-.container_tovara:hover {
-    border: 1px solid rgb(53, 53, 243);
-    transition: all 0.3s ease;
-    box-shadow: 3px 3px 6px 1px rgb(53, 53, 243);
+.tech-info {
+margin-left: 50px;
+border: 3px solid #3e1dfc;
+border-radius: 15px;
+background: #537cee;
+padding-top:15px;
+padding-left: 50px;
+padding-right: 15px;
+display: block;
+width: 100%;
+font-family: "Raleway", sans-serif;
+font-weight: 600;
+font-size: 20px;
 
 }
-
-.main_container {
-    width: 100%;
-    height: 30%;
-background-color: rgb(231, 223, 223);
-border-bottom-left-radius: 8px;
-border-bottom-right-radius: 8px;
-}
-
-.nazva {
-    width: 100%;
-    height: 60%;
-
-}
-
-.nazva a {
-    text-decoration: none;
-    color: black;
-}
-
-.cina_vkorzinu {
+.info-lines {
     display: flex;
     justify-content: space-between;
-
-    width: 100%;
-    height: 40%;
+    border-bottom: 2px dotted white;
+    color: white;
+    padding-top: 10px;
 }
 
-.cina {
-    width: 40%;
+/* кінець основні характеристики/
 
-}
-
-.cinatext {
-    font-family: 'Lora', serif;
-    text-align: center;
-    font-size: 20px;
-    color: rgb(199, 13, 13);
-}
-
-.nazva_tovaru {
-    text-align: center;
-    font-family: 'Exo 2', sans-serif;
-    font-size: 15px;
-}
-
-.vkorzinu {}
-
-.btn {
-    color: rgb(15, 19, 241);
-    font-size: 25px;
-    cursor: pointer;
-    width: 35px;
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
-    border: none;
-}
-
-.btn:hover {
-
-    border-radius: 5px;
-    color: rgb(226, 240, 99);
-    background-color: rgb(8, 114, 184);
-    border-color: blue;
-}
 /*footer*/
 footer {
     width: 100%;
@@ -446,5 +380,6 @@ background-color: #537cee ;
     }
 /*кінець футера*/
 
+/*ціна і вкорзину*/
 
-
+/*кінець ціна і в корзину*/
