--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,14 +5,11 @@
 }
 body {
     width: 100%;
-    height: 100%;
-
+    height: auto;
     margin-bottom: 0;
     padding-bottom: 0;
-    background: 
-    url("../IMG/pray-for-ukraine.webp") center 
-    no-repeat;
-    background-size:cover;
+    background:            url("../IMG/pray-for-ukraine.webp");
+    background-size: cover;
     position: relative;
 }
 header {
@@ -353,97 +350,72 @@ border-bottom-right-radius: 8px;
 }
 /*footer*/
 footer {
-    width: 100%;
-    height: 100px;
-    position: absolute;
-    bottom: 0px;
     padding: 0;
-    background:none;
-    opacity: 1.1;
-    border-top: 4px solid #3e1dfc;
-    
-    }
+    margin: 0;
 
-    .footer_container {
-background-color: #537cee ;
-    display: flex;
-    justify-content: space-between;
+
+
     width: 100%;
-    height: 100%;
-    padding-top: 10px;
-    }
-    .grafik {
-            width: 12%;
-        height: 100%;
-        margin-left: 40px;
-        color: rgb(0, 0, 0);
-        
-    }
-    .grf {
-        display: flex;
-        justify-content: space-between;
-    }
-    .social {
-            width: 30%;
-        height: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
-        margin-right: 10px;
-    }
-    .social img {
-        width: 2.5vw;
-        height: 2.5vw;
-        object-fit: contain;
-    }
-    .bol_text {
-        font-size: 1vw;
-        font-weight: 700;
-    
-    }
-    .grf p {
-        font-size: 1vw;
-    }
-    .grafik_title {
-        text-align: center;
-        font-size: 1.5vw;
-        font-weight: 700;
-    }
-    .contacts {
-    
-        width: 35%;
-        height: 100%;
-        color: rgb(0, 0, 0);
-        position: relative;
-        
-    }
-    .icon_ctnt {
-        
-    }
-    .contn {
+    height: 115px;
+    background: linear-gradient(rgb(128, 128, 246), blue);
+
+}
+
+.fully {
     display: flex;
-    justify-content: space-between;
-    }
-    .cont-title {
-        text-align: center;
-        color: rgb(4, 4, 4);
-        font-size: 1.5vw;
-        font-weight: 700;
-    }
-    .icon_ctnt  img, .txt_ctnt img {
-        width: 1.5vw;
-        height: 1.5vw;
-        object-fit: contain;
-        margin-right: 10px;
-        margin-top: 5px;
-    }
-    .tak {
-        font-size: 1.5vw;
-        padding-bottom: 15px;
-    
-    }
-/*кінець футера*/
+
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.logos-footer img {
+    width: 150px;
+    height: 60px;
+}
+
+.phoneAndEmail {
+    font-family: "Raleway", sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    display: flex;
+    gap: 20px;
+
+}
+
+.contacts {
+    text-align: center;
+    font-size: 25px;
+    color: white;
+    margin: 0;
+
+}
+
+.tel-mail {
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.tel-mail p {
+    margin: 0;
+}
+
+.social-icons {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.social-icons i {
+
+    font-size: 40px;
+    margin: 10px;
+    color: white;
 
 
-
+}
